welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.code
def indexOfValue(nums:Array[Int] ,value:Int): Int = {
	var j : Int = 0
	for (j<-0 to (i <- 0 to (T.length-1))){
		if(nums(j)==value){
			return j
		}else{
			return -1
		}
	}
}
	


